--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,26 +4,26 @@
 :root {
   /* #region  /**=========== Primary Color =========== */
   /* !STARTERCONF Customize these variable, copy and paste from /styles/colors.css for list of colors */
-  --tw-color-primary-50: 240 249 255;
-  --tw-color-primary-100: 224 242 254;
-  --tw-color-primary-200: 186 230 253;
-  --tw-color-primary-300: 125 211 252;
-  --tw-color-primary-400: 56 189 248;
-  --tw-color-primary-500: 14 165 233;
-  --tw-color-primary-600: 2 132 199;
-  --tw-color-primary-700: 3 105 161;
-  --tw-color-primary-800: 7 89 133;
-  --tw-color-primary-900: 12 74 110;
-  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f0f9ff */
-  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #e0f2fe */
-  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #bae6fd */
-  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #7dd3fc */
-  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #38bdf8 */
-  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #0ea5e9 */
-  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #0284c7 */
-  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #0369a1 */
-  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #075985 */
-  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #0c4a6e */
+  --tw-color-primary-50: 248 250 252;
+  --tw-color-primary-100: 241 245 249;
+  --tw-color-primary-200: 226 232 240;
+  --tw-color-primary-300: 203 213 225;
+  --tw-color-primary-400: 148 163 184;
+  --tw-color-primary-500: 100 116 139;
+  --tw-color-primary-600: 71 85 105;
+  --tw-color-primary-700: 51 65 85;
+  --tw-color-primary-800: 30 41 59;
+  --tw-color-primary-900: 15 23 42;
+  --color-primary-50: rgb(var(--tw-color-primary-50)); /* #f8fafc */
+  --color-primary-100: rgb(var(--tw-color-primary-100)); /* #f1f5f9 */
+  --color-primary-200: rgb(var(--tw-color-primary-200)); /* #e2e8f0 */
+  --color-primary-300: rgb(var(--tw-color-primary-300)); /* #cbd5e1 */
+  --color-primary-400: rgb(var(--tw-color-primary-400)); /* #94a3b8 */
+  --color-primary-500: rgb(var(--tw-color-primary-500)); /* #64748b */
+  --color-primary-600: rgb(var(--tw-color-primary-600)); /* #475569 */
+  --color-primary-700: rgb(var(--tw-color-primary-700)); /* #334155 */
+  --color-primary-800: rgb(var(--tw-color-primary-800)); /* #1e293b */
+  --color-primary-900: rgb(var(--tw-color-primary-900)); /* #0f172a */
   /* #endregion  /**======== Primary Color =========== */
 }
 
